--- a/Frontend/src/assets/main.css
+++ b/Frontend/src/assets/main.css
@@ -1,13 +1,17 @@
-@import './base.css';
+*{
+  box-sizing: border-box;
+}
+#app {
+  max-width: 1280px;
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
 
-body {
-  display: flex;
-  flex: 100vh;
-  place-items: center;
+  font-weight: normal;
 }
 
-#app {
-  display: flex;
-  flex-direction: column;
-  flex: 100vh;
+a,
+.green {
+  text-decoration: none;
+  color: hsla(160, 100%, 37%, 1);
+  transition: 0.4s;
 }
